...
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <Button
        android:id="@+id/addCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:background="@drawable/add_delete_button"
        android:padding="5dp"
        android:text="Add Course"
...
