...
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:backgroundTint="#7186DA"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOpenPopup"
        app:layout_constraintStart_toEndOf="@+id/btnFiltreaza"
        app:layout_constraintTop_toTopOf="@+id/buttonOpenPopup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonOpenPopup"
...
